<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LifeCycle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="list">List</string>
    <string name="lifecycle">Transitions</string>
    <string name="show_dialog">Go to mintic.gov.co</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>

</resources>