<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lifecycle"
        android:textSize="25sp" />

    <Button
        android:id="@+id/BtnGoWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="16dp"
        android:text="@string/show_dialog"
        android:onClick="buttonHandler" />

    <Button
        android:id="@+id/BtonStartService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BtnGoWebsite"
        android:layout_below="@+id/BtnGoWebsite"
        android:layout_marginTop="14dp"
        android:text="@string/start_service"
        android:onClick="buttonHandler" />

    <TextView
        android:id="@+id/TVMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BtonStartService"
        android:layout_below="@+id/BtonStartService"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="18dp"
        android:text="@string/list"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/BtnStopService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TVMap"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/stop_service"
        android:onClick="buttonHandler" />

</RelativeLayout>